--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
     <section id="intro" class="section">
       <div class="content">
-        <h2>Bienvenue dans l'Odyssée Stellaire</h2>
+        <h2>Bienvenue dans l'Odyssée Cosmique</h2>
         <p>Parcourez l'histoire fascinante de l'évolution des étoiles, de leur naissance à leur destin final, dans une
           expérience immersive et interactive.</p>
       </div>
